tests/reject/var.alg
sort Nat : Sort;
var n : Nat;
